[package]
name = "ledgerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bigdecimal = "0.3.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
clap = { version = "4.2.2", features = ["derive"] }
glob = "0.3.1"
itertools = "0.10.5"
nom = "7.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
