[package]
name = "ledgerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bigdecimal = "0.4.3"
chrono = "0.4.35"
chrono-tz = "0.8.6"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
ellipse = "0.2.0"
glob = "0.3.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
minijinja = "1.0.12"
nom = "7.1.3"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_regex = "1.1.0"
tera = "1.19.1"
terminal_size = "0.2.6"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
